--- a/docs/de-de/modules/warenwirtschaft/pages/plentywarehouse.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/plentywarehouse.adoc
@@ -23,7 +23,7 @@ Aktuell sind folgende Funktionen in plentyWarehouse enthalten. Klicke auf die ei
 * xref:warenwirtschaft:artikel-verraeumen.adoc#[Artikel verräumen]
 * xref:warenwirtschaft:inventur-durchfuehren.adoc#[Inventur durchführen]
 * xref:warenwirtschaft:mobile-picklisten.adoc#[Mit Picklisten arbeiten]
-* xref:warenwirtschaft:rollende-kommissionierung.adoc#[Rollende Kommissionierung nutzen]
+* xref:warenwirtschaft:rollende-kommissionierung.adoc#[Rollende Kommissionierung durchführen]
 * xref:warenwirtschaft:etiketten-drucken.adoc#[Etiketten für Artikel und Lagerorte drucken]
 
 [#200]
