--- a/docs/en-gb/modules/stock-management/pages/plentywarehouse.adoc
+++ b/docs/en-gb/modules/stock-management/pages/plentywarehouse.adoc
@@ -23,6 +23,7 @@ The following functions are currently available in plentyWarehouse. Click on the
 * xref:stock-management:reshelving-items.adoc#[Reshelving items]
 * xref:stock-management:carrying-out-stocktaking.adoc#[Taking stock]
 * xref:stock-management:mobile-pick-lists.adoc#[Working with pick lists]
+* xref:stock-management:box-picking.adoc#[Carrying out box picking]
 * xref:stock-management:printing-labels.adoc#[Printing labels for items and storage locations]
 
 [#200]
