--- a/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
@@ -10,10 +10,10 @@ Mit der rollenden Kommissionierung kann dein Lagerpersonal die benötigten Artik
 
 Die plentyWarehouse App bietet dir eine überarbeitete und optimierte Funktion zur rollenden Kommissionierung. Auf dieser Handbuchseite findest du alle notwendigen Informationen.
 
-[IMPORTANT]
+[IMPORTANT]:right
 .Labels für Lagerorte verwenden
 ====
-Für die rollende Kommissionierung mit plentyWarehouse empfehlen wir dir, dass du pro Lagerort und <<#400, Box>> ein Label erstellt und am passenden Lagerort angebracht hast. Während der rollenden Kommissionierng scannst du den Barcode auf dem Label mit deinem Gerät, um so die passenden Lagerorte und Box-Lagerorte auszuwählen.
+Für die rollende Kommissionierung mit plentyWarehouse empfehlen wir dir, dass du pro Lagerort und <<#400, Box>> ein Label erstellt und am passenden Lagerort angebracht hast. Während der rollenden Kommissionierung scannst du den Barcode auf dem Label mit deinem Gerät, um so die passenden Lagerorte und Box-Lagerorte auszuwählen.
 Du hast noch keine Labels für Lagerorte erstellt? Die passende Anleitung findest du auf der Handbuchseite xref:warenwirtschaft:lager-einrichten.adoc#800[Lager einrichten].
 ====
 
@@ -149,7 +149,7 @@ Einstellungen vornehmen:
 |[#intable-storage-location-scan]*Lagerort-Scan verpflichtend*
 |Wie sollen Lagerorte und Boxen für die rollende Kommissionierung ausgewählt werden? +
 *Aktiviert* (icon:toggle-on[role="green"]) = Lagerorte und Boxen _müssen_ per Scan ausgewählt werden, damit anschließend Artikel gebucht werden können. +
-*Nicht aktiviert* (icon:toggle-off[role="darkGrey"]) = Lagerorte und Boxen können manuell ausgewählt werden, indem du auf sie tippst.
+*Nicht aktiviert* (icon:toggle-off[role="darkGrey"]) = Lagerorte und Boxen können manuell ausgewählt werden, indem du in der App auf sie tippst.
 
 //| *Sortierung der Aufträge*
 //|Diese Einstellung bestimmt genauer, nach welchem Kriterium Aufträge in die rollende Kommissionierung einbezogen werden sollen. +
@@ -197,7 +197,7 @@ Einstellungen vornehmen:
 |====
 
 [#800]
-== Rollende Kommissionierung in plentyWarehouse App nutzen
+== Rollende Kommissionierung in plentyWarehouse nutzen
 
 Nachdem du alle vorbereitenden Einstellungen vorgenommen hast, kannst du die plentyWarehouse App nutzen, um mehrere Aufträge gleichzeitig zu picken und versandfertig vorsortiert an den Packtisch zu liefern.
 
@@ -256,7 +256,7 @@ Manche Aufträge enthalten mehr als nur einen Artikel. Hast du bereits den erste
 [#1200]
 === Artikel picken
 
-plentyWarehouse zeigt dir einige wichtige Informationen zum Stand der Kommissionierung an. an. Somit siehst du die Anzahl der Artikel, die gepickt werden sollen, so wie den Lagerort, an dem sich die Artikel befinden.
+plentyWarehouse zeigt dir einige wichtige Informationen zum Stand der Kommissionierung an. Somit siehst du die Anzahl der Artikel, die gepickt werden sollen, so wie den Lagerort, an dem sich die Artikel befinden.
 
 [.instruction]
 Artikel picken:
@@ -285,7 +285,7 @@ Für solche Fälle findest du in der Ansicht des jeweiligen Artikels Shortcuts, 
 |====
 |Bedienelement |Symbol |Erläuterung
 
-|[intable-add-note]*Kommentar*
+|[#intable-add-note]*Kommentar*
 |icon:chat[set=material]
 | Öffnet die Ansicht zur Eingabe einer Auftragsnotiz. Nutze diese Funktion, um einen Kommentar zu speichern, der in der späteren Abwicklung an jedem Auftrag, in dem der Artikel vorhanden ist, im Backend deines plentymarkets System einsehbar ist.
 
@@ -303,7 +303,7 @@ Für solche Fälle findest du in der Ansicht des jeweiligen Artikels Shortcuts, 
 
 | *Artikelinformationen* 
 |icon:info[set=material]
-| Öffnet eine Seite mit weiteren Informationen zum Artikel. Je nachdem, welche du Einstellung für die Option xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#intable-other-settings[Shortcut-Verhalten] gewählt hast, erscheint eine Abfrage, ob du nach dem Aufrufen der Artikelinformationen automatisch zur Pickliste zurückgeleitet werden möchtest.
+| Öffnet eine Seite mit weiteren Informationen zum Artikel. Je nachdem, welche du Einstellung für die Option xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#intable-other-settings[Shortcut-Verhalten] gewählt hast, erscheint eine Abfrage, ob du nach dem Aufrufen der Artikelinformationen automatisch zur Artikelliste zurückgeleitet werden möchtest.
 
 |====
 
