--- a/docs/en-gb/modules/stock-management/pages/installation-and-initial-setup.adoc
+++ b/docs/en-gb/modules/stock-management/pages/installation-and-initial-setup.adoc
@@ -73,7 +73,7 @@ You can change the order of the dashboard areas according to your wishes. To do 
 .Areas on the dashboard
 [cols="2,1,6"]
 |===
-|Area |Symbol |Explanation
+|Availability |Symbol |Explanation
 
 | *General information*
 |icon:person[set=material]
@@ -95,6 +95,11 @@ a|This area contains tiles with symbols that represent the individual functions 
 
 * image:stock-management:icon_pick-lists.png[width=24, height=24]
 xref:stock-management:mobile-pick-lists.adoc#[Working with pick lists]
+
+* image:stock-management:icon_pick-lists.png[width=24, height=24]
+xref:stock-management:mobile-pick-lists.adoc#[Working with pick lists]
+
+* xref:image:stock-management:icon_box-picking.png[width=24, height=24] xref:stock-management:box-picking.adoc#[Box picking]
 
 Tap on a tile for quick access to the respective function. Once you have used the functions of plentyWarehouse several times, the tiles are sorted automatically. The tiles of the most frequently used functions will be displayed at the left side of this area.
 
