--- a/docs/en-gb/modules/stock-management/pages/box-picking.adoc
+++ b/docs/en-gb/modules/stock-management/pages/box-picking.adoc
@@ -72,7 +72,7 @@ Making boxes available:
 Before box picking is carried out in plentyWarehouse, make sure that all users have been assigned the appropriate rights. This is necessary to make sure that the picking process is carried out correctly.
 
 :rights-purpose: carry out box picking in plentyWarehouse
-:right-one_ pass:quotes[*Item > Item > Item image > Item image name > Show*]
+:right-one: pass:quotes[*Item > Item > Item image > Item image name > Show*]
 :right-two: pass:quotes[*Orders > Show*]
 :right-three: pass:quotes[*Orders > Update*]
 :right-four: pass:quotes[*Comments > Show*]
