FIX a few issues noticed after go-live

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -78,7 +78,7 @@
 *** xref:stock-management:working-with-reorders.adoc[Working with reorders]
 *** xref:stock-management:managing-backlog-lists.adoc[Managing backlog lists]
 *** xref:stock-management:best-practice-exporting-reorders.adoc[Best Practices: Exporting reorder data]
-** xref:stock-management:managing-reorders.adoc[Use-cases]
+** xref:stock-management:use-cases.adoc[Use-cases]
 *** xref:stock-management:managing-bbd-batch.adoc[Items with BBD/Batch number]
 *** xref:stock-management:properties.adoc[Using properties to characterise storage locations]
 ** xref:stock-management:plentywarehouse.adoc[The plentyWarehouse app (Beta)]
