--- a/docs/en-gb/modules/app/pages/reshelving.adoc
+++ b/docs/en-gb/modules/app/pages/reshelving.adoc
@@ -65,7 +65,7 @@ Configuring the settings:
 
 | *Suggested target storage locations*
 |Where do you want to put the items once they’ve been reshelved? Use the toggle buttons to include or exclude specific types of storage locations. +
-*Suggested storage location* = Storage locations that are xref:stock-management:new-incoming-items.adoc#200[linked to a variation]. +
+*Suggested storage location* = Storage locations that are xref:stock-management:variations-track-stock.adoc#300[linked to a variation]. +
 *Used storage locations* = Storage locations where variations are already stored. +
 *Empty storage locations* = All available storage locations. +
 *_Note:_* Depending on the number of storage locations, the setting *Empty storage locations* can significantly slow down the reshelving process. As such, we recommend that you link variations to storage locations and only activate empty storage locations if strictly necessary. +
