--- a/docs/en-gb/modules/data/pages/elasticSync-item.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-item.adoc
@@ -2985,7 +2985,7 @@ You can find the result of the import in the back end menu: xref:item:managing-i
 [#1900]
 ==== Reorder level
 
-Enter the xref:stock-management:new-incoming-items.adoc#200[reorder level] into the CSV file.
+Enter the xref:stock-management:variations-track-stock.adoc#300[reorder level] into the CSV file.
 
 //*_Default value_*: No default value
 
@@ -3000,7 +3000,7 @@ You can find the result of the import in the back end menu: xref:item:managing-i
 [#1915]
 ==== Maximum stock
 
-Enter the xref:stock-management:new-incoming-items.adoc#200[maximum stock] into the CSV file.
+Enter the xref:stock-management:variations-track-stock.adoc#300[maximum stock] into the CSV file.
 
 //*_Default value_*: No default value
 
@@ -3015,7 +3015,7 @@ You can find the result of the import in the back end menu: xref:item:managing-i
 [#1925]
 ==== Stock turnover (in days)
 
-Enter the xref:stock-management:new-incoming-items.adoc#200[stock turnover] into the CSV file.
+Enter the xref:stock-management:variations-track-stock.adoc#300[stock turnover] into the CSV file.
 
 //*_Default value_*: No default value
 
@@ -3048,7 +3048,7 @@ You can find the result of the import in the back end menu: xref:item:managing-i
 [#1940]
 ==== Stock buffer
 
-Enter the xref:stock-management:new-incoming-items.adoc#200[stock buffer] into the CSV file.
+Enter the xref:stock-management:variations-track-stock.adoc#300[stock buffer] into the CSV file.
 
 //*_Default value_*: No default value
 
@@ -3063,7 +3063,7 @@ You can find the result of the import in the back end menu: xref:item:managing-i
 [#1950]
 ==== Batch (yes/no)
 
-Should the product’s xref:stock-management:new-incoming-items.adoc#200[batch number] be recorded for the variation and warehouse?
+Should the product’s xref:stock-management:variations-track-stock.adoc#300[batch number] be recorded for the variation and warehouse?
 Enter one of the permitted import values into your CSV file.
 
 //*_Default value_*: `0`
@@ -3088,7 +3088,7 @@ You can find the result of the import in the back end menu: xref:item:managing-i
 [#1960]
 ==== Best before date (yes/no)
 
-Should the product’s xref:stock-management:new-incoming-items.adoc#200[best before date] be recorded for the variation and warehouse?
+Should the product’s xref:stock-management:variations-track-stock.adoc#300[best before date] be recorded for the variation and warehouse?
 Enter one of the permitted import values into your CSV file.
 
 //*_Default value_*: `0`
