--- a/docs/en-gb/modules/stock-management/pages/reshelving-items.adoc
+++ b/docs/en-gb/modules/stock-management/pages/reshelving-items.adoc
@@ -111,7 +111,7 @@ Carrying out settings for reshelving items:
 | *Suggested storage location list*
 |Where do you want to put the items once they’ve been reshelved? Use the toggle buttons to include or exclude specific types of storage locations. +
 *Used storage locations* = Storage locations where variations are already stored. +
-*Suggested storage locations* = Storage locations that are xref:stock-management:new-incoming-items.adoc#200[linked to a variation]. +
+*Suggested storage locations* = Storage locations that are xref:stock-management:variations-track-stock.adoc#300[linked to a variation]. +
 *Empty storage locations* = All available storage locations. +
 *_Note:_* Depending on the number of storage locations, the setting *Empty storage locations* can significantly slow down the reshelving process. As such, we recommend that you link variations to storage locations and only activate empty storage locations if strictly necessary. +
 *_Use case:_* During reshelving, the app will suggest storage locations that you might want to reshelve. You’ll only be suggested the source storage locations that meet these criteria. If you want to use a storage location that _was not suggested_, then you’ll have to scan the storage location rather than select it from the list of suggestions in the app.
