--- a/docs/en-gb/modules/stock-management/pages/stock-management.adoc
+++ b/docs/en-gb/modules/stock-management/pages/stock-management.adoc
@@ -8,4 +8,4 @@
 zuletzt bearbeitet 06.05.2022
 ////
 
-include::page$stock-management.adoc[tag=stock-management]
+include::page$stock.adoc[tag=stock-management]
