--- a/docs/en-gb/modules/stock-management/pages/working-with-redistributions.adoc
+++ b/docs/en-gb/modules/stock-management/pages/working-with-redistributions.adoc
@@ -1,6 +1,6 @@
-= Carrying out redistributions
-:description: Learn how to work with redistributions from warehouse to warehouse in your plentymarkets system.
-:keywords: redistribution, warehouse redistribution, PO delivery note, create PO delivery note, redistribution id, purchase order
+= Movement: Transfer goods
+:description: Learn how to transfer stock from one warehouse to another in your plentymarkets system.
+:keywords: Stock transfer, redistribution, warehouse redistribution, PO delivery note, create PO delivery note, redistribution id, purchase order
 :id: A5QIHYW
 :author: team-stock, team-order-core
 
