--- a/docs/en-gb/modules/item/pages/import-export-create-directory.adoc
+++ b/docs/en-gb/modules/item/pages/import-export-create-directory.adoc
@@ -1505,7 +1505,7 @@ include::partial$supplier.adoc[]
 [#312]
 === Warehouse
 
-In the **Warehouse** tab of a variation, you select warehouses for the product and enter xref:stock-management:new-incoming-items.adoc#200[warehouse information], i.e. reorder level and maximum stock.
+In the **Warehouse** tab of a variation, you select warehouses for the product and enter xref:stock-management:variations-track-stock.adoc#300[warehouse information], i.e. reorder level and maximum stock.
 
 
 [#314]
