UPDATE lowest price feature to reflect new plentyShop version

--- a/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
@@ -5,7 +5,7 @@
 :author: team-stock
 
 Es gibt verschiedene Wege, über die du Waren in dein System buchen kannst.
-Voraussetzung für einen Wareneingang ist, dass der Variante ein Lager, ein Lagerort und ein:e Lieferant:in zugeordnet sind.
+Voraussetzung für einen Wareneingang ist, dass der Variante ein Lager, ein Lagerort und ein Lieferant zugeordnet sind.
 
 Auf dieser Seite wird der Wareneingang über das Menü *Waren » Neuer Wareneingang* beschrieben.
 Nur wenn du Wareneingänge und Warenausgänge buchst und so Warenbestände in plentymarkets führst, kann dein System Varianten anhand der xref:artikel:artikel-verwalten.adoc#200[Beschränkung und Verfügbarkeit] automatisiert im Webshop ein- und ausblenden sowie Listings automatisiert starten und beenden.
