--- a/docs/en-gb/modules/item/pages/prices.adoc
+++ b/docs/en-gb/modules/item/pages/prices.adoc
@@ -457,14 +457,13 @@ In these regulations, § 11 (1) specifies how prices must be displayed when prod
 
 The lowest price can manually be entered into plentymarkets, imported or automatically calculated.
 
-IMPORTANT: Currently, the lowest price can only be saved in the plentymarkets back end.
-Starting with link:https://marketplace.plentymarkets.com/ceres_4697[plentyShop LTS version 5.0.51^], it will also be possible to display this value in the webshop.
+IMPORTANT: This value is displayed in the webshop starting from link:https://marketplace.plentymarkets.com/ceres_4697[plentyShop LTS version 5.0.51^].
 
 [.instruction]
 Manual entry:
 
 . Open the menu *Item » Item UI » [Open variation] » Element: Sales prices*.
-. In a line, click on icon:ellipsis-v[role="darkGrey"] and then on icon:sell[set=material, role="darkGrey"] *Lowest price* icon:arrow_right[set=material, role="darkGrey"] icon:pencil[role="darkGrey"] *Activate manual entry*. +
+. In a line, click on icon:ellipsis-v[role="darkGrey"] and then on icon:sell[set=material, role="darkGrey"] *Lowest price »* icon:pencil[role="darkGrey"] *Activate manual entry*. +
 → The column becomes editable and the gross price is automatically entered into it.
 . Enter a different value into the column if needed.
 . *Save* (icon:save[set=plenty, role="darkGrey"]) the settings.
@@ -475,7 +474,7 @@ Manual entry:
 Automatic calculation:
 
 . Open the menu *Item » Item UI » [Open variation] » Element: Sales prices*.
-. In a line, click on icon:ellipsis-v[role="darkGrey"] and then on icon:sell[set=material, role="darkGrey"] *Lowest price* icon:arrow_right[set=material, role="darkGrey"] icon:calculate_acquisition_pricepng[set=plenty, role="darkGrey"] *Activate automatic calculation*. +
+. In a line, click on icon:ellipsis-v[role="darkGrey"] and then on icon:sell[set=material, role="darkGrey"] *Lowest price »* icon:calculate_acquisition_pricepng[set=plenty, role="darkGrey"] *Activate automatic calculation*. +
 → The lowest price of the last 30 days is automatically entered into the column.
 This value is calculated with the help of the xref:item:changes.adoc#[change history].
 If you have not yet activated the change history, then you will see a pop-up window, which informs you of the costs that will be incurred.
