--- a/docs/en-gb/modules/stock-management/pages/new-incoming-items.adoc
+++ b/docs/en-gb/modules/stock-management/pages/new-incoming-items.adoc
@@ -3,7 +3,11 @@
 :id: D1FCJJV
 :author: team-stock
 
-There are several ways to book stock into your system. First of all, you need to have a warehouse, a storage location and a supplier assigned to a variation. On this page you will learn how to assign a storage location and a supplier to a variation. Furthermore, it is explained how to book in stock via the *Stock » New incoming items* menu. Your system will only be able to automatically xref:item:managing-items.adoc#200[adjust the display of variations in your online store] and to start listings, if you book variations in and out and manage your stock correctly in plentymarkets.
+There are several ways to book stock into your system.
+First of all, you need to have a warehouse, a storage location and a supplier assigned to a variation.
+
+This page teaches you how to book in stock via the *Stock » New incoming items* menu.
+Your system will only be able to automatically xref:item:managing-items.adoc#200[adjust the display of variations in your online store] and to start listings, if you book variations in and out and manage your stock correctly in plentymarkets.
 
 [#250]
 == Identifying the purchase price
@@ -13,7 +17,7 @@ How the two different average purchase prices are calculated is described in the
 
 [[table-average-purchase-price-calculation]]
 .Formulas average purchase price
-[cols="1,1"]
+[cols="1a,1a"]
 |====
 |Live average calculation |Moving average calculation
 
