--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -68,6 +68,15 @@ Die grundsätzliche Funktionsweise zum Erstellen und Ausführen eines Imports is
 
 Importe erstellst, bearbeitest und verwaltest du im Menü *Daten » Import*.
 
+[#imports-define]
+=== Videoeinführung: Erste Schritte mit dem Import-Tool
+
+Du bist noch neu in Sachen Importe? Dann empfehlen wir unser Einführungsvideo.
+
+*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt. Eine Gute Einführung in das Thema bietet das Video trotzdem.
+
+video::322201964[vimeo]
+
 [#imports-terms]
 === Wichtige Begriffe
 
