fix image link for deposit bp

--- a/docs/de-de/modules/artikel/pages/personalisierte-artikel.adoc
+++ b/docs/de-de/modules/artikel/pages/personalisierte-artikel.adoc
@@ -349,7 +349,7 @@ include::partial$link-property-characteristic.adoc[]
 
 include::partial$link-property-instructions.adoc[]
 
-image::artikel/anwendungsfaelle/assets/bestelleigenschaft-vorausgewählt-verpflichtend-verknuepfung.png[]
+image::artikel:bestelleigenschaft-vorausgewählt-verpflichtend-verknuepfung.png[]
 
 [#bestelleigenschaft-pruefen]
 ==== Das Ergebnis prüfen
