--- a/docs/de-de/modules/artikel/pages/personalisierte-artikel.adoc
+++ b/docs/de-de/modules/artikel/pages/personalisierte-artikel.adoc
@@ -323,6 +323,7 @@ Neue Bestelleigenschaft erstellen:
 .. *Optionen » Bestelloptionen*: Wähle die Option *Bestelleigenschaft*.
 .. *Optionen » Bestelloptionen*: Wähle die Option *Verpflichtend*.
 .. *Optionen » Bestelloptionen*: Wähle die Option *Vorausgewählt*.
+.. *Optionen » Bestelloptionen*: Wähle die Option *Zusätzliche Kosten anzeigen*.
 
 * Wo soll die Eigenschaft erscheinen?
 .. *Sichtbarkeiten » Herkunft*: Wähle die Option *Mandant (Shop)*.
