--- a/docs/de-de/modules/artikel/partials/scenario-required-preselected.adoc
+++ b/docs/de-de/modules/artikel/partials/scenario-required-preselected.adoc
@@ -1,5 +1,5 @@
 Du kannst Bestelleigenschaften nutzen, um anfallende zusätzliche Kosten abzubilden.
 Stell dir vor, du verkaufst Energy Drinks in Dosen. 
-Dafür musst du den dazugehörigen Dosenpfand auf der Artikelseite ausweisen.
-Kund:innen sollen also auf der Artikelseite sehen, dass sie den Artikel zzgl. Pfand kaufen, ohne dass sie die Möglichkeit haben, den Pfand abzuwählen. Dafür legst du eine Bestelleigenschaft an, die sowohl *vorausgewählt* als auch *verpflichtend* ist. Dadurch wird die Bestelleigenschaft ohne eine Checkbox angezeigt.
+Dafür musst du das dazugehörige Dosenpfand auf der Artikelseite ausweisen.
+Kund:innen sollen also auf der Artikelseite sehen, dass sie den Artikel zzgl. Pfand kaufen, ohne dass sie die Möglichkeit haben, das Pfand abzuwählen. Dafür legst du eine Bestelleigenschaft an, die sowohl *vorausgewählt* als auch *verpflichtend* ist. Dadurch wird die Bestelleigenschaft ohne eine Checkbox angezeigt. Um Pfand im plentyShop abzubilden, aktivierst du für die Eigenschaft auch die Bestelloption *Zusätzliche Kosten anzeigen*. Dadurch wird das Pfand gesondert neben dem Gesamtpreis als "zzgl." ausgewiesen und nicht in Gesamt- und Grundpreis eingerechnet.
 Die Vorgehensweise ist wie folgt:
