--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -687,6 +687,7 @@
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
 * xref:changelog:may-2022.adoc[Changelogs Mai 2022]
+** xref:changelog:2022-05-25.adoc[Changelog 25. Mai 2022]
 ** xref:changelog:2022-05-18.adoc[Changelog 18. Mai 2022]
 ** xref:changelog:2022-05-11.adoc[Changelog 11. Mai 2022]
 ** xref:changelog:2022-05-04.adoc[Changelog 04. Mai 2022]
