add app tab + changelogs

--- a/docs/de-de/modules/changelog/pages/2022-05-25.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-05-25.adoc
@@ -102,4 +102,19 @@ Wenn du dir weitere neue oder aktualisierte Plugins anschauen möchtest, findest
 
 --
 
+plentymarkets App::
+*
+--
+
+[discrete]
+== Behoben
+
+Folgende Probleme wurden in Version 1.11.29 der *plentymarkets App* behoben.
+
+* Bei Verwendung von Ingenico Kartenterminals konnte die Erstellung des Tagesabschlussberichts nicht über die Kasse gestartet werden. Dieses Verhalten wurde behoben.
+
+* In manchen Fällen wurde die rollende Kommissionierung fälschlicherweise mehrfach gestartet. Dieses Verhalten wurde behoben.
+
+--
+
 ====
