move early entries to stable

--- a/docs/de-de/modules/changelog/pages/2022-05-25.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-05-25.adoc
@@ -27,7 +27,15 @@ stable::
 
 Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
+[discrete]
+=== CRM
 
+* Im Menü *CRM » Kontakte* im Portlet *Aufträge* wurde die Spalte *Haupt* hinzugefügt. Diese Spalte zeigt den Hauptauftrag einer Gutschrift, Reparatur etc. an. Mit einem Klick auf die ID in der Spalte *Haupt* wird man in den Auftrag weitergeleitet.
+
+[discrete]
+=== Ereignisaktionen
+
+* Die Ereignisaktionen *Offene Mengen in Nachbestellung stornieren* und *Gewährleistung anlegen* sind nun im Menü *Einrichtung » Aufträge » Ereignisse* verfügbar.
 
 '''
 
@@ -44,6 +52,11 @@ Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlic
 == Behoben
 
 Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
+
+[discrete]
+=== CRM
+
+* Nach Ändern der Tabellenspalten des Kontos wurden diese beim nächsten Aufruf nicht geladen. Dies ist nun behoben.
 
 
 
